--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,25 @@
     android:layout_height="match_parent"
 
     tools:context=".MainActivity">
+<ImageView
+    android:layout_width="match_parent"
+    android:layout_height="100dp"
+    android:background="@drawable/gradient"></ImageView>
+<ImageView
+    android:layout_width="250dp"
+    android:layout_height="250dp"
+    android:src="@drawable/e"
+    android:layout_centerHorizontal="true"
+    android:layout_marginTop="100dp"
+    ></ImageView>
 
-
-    <ImageView
+    <!--<ImageView
         android:layout_width="518dp"
         android:layout_height="665dp"
         android:src="@drawable/bg"
         android:layout_alignParentTop="true"
         android:layout_marginTop="-80dp"
-        ></ImageView>
+        ></ImageView>-->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
