--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#3B000000"
-        android:endColor="#00000"
+        android:startColor="#45000000"
+        android:endColor="#00FFFFFF"
         android:angle="270"/>
     <corners android:radius="5dp" />
 </shape>
