--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,14 @@
     tools:context=".MainActivity">
 <ImageView
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="70dp"
     android:background="@drawable/gradient"></ImageView>
 <ImageView
-    android:layout_width="250dp"
-    android:layout_height="250dp"
-    android:src="@drawable/e"
+    android:layout_width="400dp"
+    android:layout_height="400dp"
+    android:src="@drawable/eecomedit"
     android:layout_centerHorizontal="true"
-    android:layout_marginTop="100dp"
+    android:layout_marginTop="25dp"
     ></ImageView>
 
     <!--<ImageView
@@ -33,6 +33,15 @@
         android:layout_marginTop="30dp"
         android:textSize="25sp"
         android:textStyle="bold"
+        android:textColor="#e3472a"
+        />
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/gicon"
+        android:layout_alignTop="@+id/google"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="110dp"
         />
     <Button
         android:id="@+id/google"
@@ -41,39 +50,36 @@
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:textAllCaps="false"
         android:layout_marginBottom="130dp"
         android:background="@drawable/bt__border"
         android:text="Google"
-        android:textSize="20sp"
-        />
+        android:textAllCaps="false"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/login"
-        android:layout_width="155dp"
+        android:layout_width="160dp"
         android:layout_height="50dp"
-
         android:layout_alignTop="@+id/google"
-
         android:layout_marginTop="80dp"
         android:background="@drawable/bt__border"
         android:layout_alignParentLeft="true"
         android:layout_marginRight="10dp"
         android:text="Log In"
         android:textSize="20sp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:textAllCaps="false"></Button>
 
     <Button
         android:id="@+id/signnup"
-        android:layout_width="150dp"
+        android:layout_width="160dp"
         android:layout_height="50dp"
         android:layout_marginLeft="10dp"
         android:layout_alignTop="@+id/google"
         android:layout_marginTop="80dp"
         android:background="@drawable/bt__border"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="10dp"
         android:text="Sign up"
         android:textSize="20sp"
         android:textAllCaps="false"
