--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="130dp"
-        android:background="@drawable/bt__border"
+        android:background="@drawable/btn_border"
         android:text="Google"
         android:textAllCaps="false"
         android:textSize="20sp" />
@@ -62,7 +62,7 @@
         android:layout_height="50dp"
         android:layout_alignTop="@+id/google"
         android:layout_marginTop="80dp"
-        android:background="@drawable/bt__border"
+        android:background="@drawable/btn_border"
         android:layout_alignParentLeft="true"
         android:layout_marginRight="10dp"
         android:text="Log In"
@@ -71,13 +71,13 @@
         android:textAllCaps="false"></Button>
 
     <Button
-        android:id="@+id/signnup"
+        android:id="@+id/signup"
         android:layout_width="160dp"
         android:layout_height="50dp"
         android:layout_marginLeft="10dp"
         android:layout_alignTop="@+id/google"
         android:layout_marginTop="80dp"
-        android:background="@drawable/bt__border"
+        android:background="@drawable/btn_border"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         android:text="Sign up"
@@ -97,7 +97,7 @@
         android:layout_marginBottom="5dp"
         android:textStyle="italic"
         android:layout_alignTop="@+id/google"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="140dp"
         android:textSize="20dp"
 
        ></TextView>
