--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="130dp"
-        android:background="@drawable/btn_border"
+        android:background="@drawable/btnbg"
         android:text="Google"
         android:textAllCaps="false"
         android:textSize="20sp" />
@@ -62,7 +62,7 @@
         android:layout_height="50dp"
         android:layout_alignTop="@+id/google"
         android:layout_marginTop="80dp"
-        android:background="@drawable/btn_border"
+        android:background="@drawable/btnbg"
         android:layout_alignParentLeft="true"
         android:layout_marginRight="10dp"
         android:text="Log In"
@@ -77,7 +77,7 @@
         android:layout_marginLeft="10dp"
         android:layout_alignTop="@+id/google"
         android:layout_marginTop="80dp"
-        android:background="@drawable/btn_border"
+        android:background="@drawable/btnbg"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         android:text="Sign up"
