--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -25,15 +25,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             >
-
-    <EditText
+<com.google.android.material.textfield.TextInputLayout
+    android:layout_width="match_parent"
+    android:id="@+id/ed1"
+    android:layout_height="wrap_content">
+    <com.google.android.material.textfield.TextInputEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email address"
         android:inputType="textEmailAddress"
         android:layout_margin="20dp"
         android:id="@+id/email"/>
-    <EditText
+</com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:id="@+id/ed2"
+                android:layout_below="@+id/ed1"
+                android:layout_height="wrap_content">
+
+    <com.google.android.material.textfield.TextInputEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/email"
@@ -41,7 +51,14 @@
         android:inputType="textPassword"
         android:hint="Password (minimum 8 characters)"
         android:id="@+id/password"/>
-   <EditText
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:id="@+id/ed3"
+                android:layout_below="@+id/ed2"
+                android:layout_height="wrap_content">
+   <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Mobile Number"
@@ -49,24 +66,32 @@
        android:layout_below="@+id/password"
        android:id="@+id/phnumber"
        android:inputType="number"/>
-    <EditText
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:id="@+id/ed4"
+                android:layout_below="@+id/ed3"
+                android:layout_height="wrap_content">
+    <com.google.android.material.textfield.TextInputEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Full Name"
         android:layout_margin="20dp"
         android:id="@+id/name"
         android:layout_below="@+id/phnumber"/>
+            </com.google.android.material.textfield.TextInputLayout>
             <TextView
                 android:id="@+id/gendertext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Select your Gender"
-                android:layout_below="@+id/name"
+                android:layout_below="@+id/ed4"
                 android:layout_marginStart="20dp"
                 android:textSize="15sp"/>
     <LinearLayout
         android:id="@+id/gender"
-        android:layout_below="@+id/name"
+        android:layout_below="@+id/ed4"
         android:weightSum="2"
         android:layout_margin="20dp"
         android:layout_width="match_parent"
