--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,16 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/draw"
     tools:context=".HomeActivity">
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+    <Toolbar
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/name"
-        android:layout_margin="20dp"
-        android:textSize="25dp"/>
+        android:id="@+id/toolbar"
+        android:title="Store"
+        android:titleTextColor="#4A4A4A"
+        android:minHeight="?attr/actionBarSize"
+        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Hdellndafdnff kfjkaljfljaklfj df ijkfljlajklf"
+            android:layout_below="@+id/toolbar"/>
+    </RelativeLayout>
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/nav_menu"
+        android:id="@+id/nav"
+        android:layout_gravity="start"
+        >
+    </com.google.android.material.navigation.NavigationView>
+<!--        android:layout_gravity="start"-->
 
-</RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
