--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,15 +92,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_centerHorizontal="true"
-        android:text="skip >>"
-        android:layout_marginBottom="5dp"
-        android:textStyle="italic"
         android:layout_alignTop="@+id/google"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="140dp"
+        android:layout_marginBottom="5dp"
+        android:onClick="skip"
+        android:text="skip >>"
         android:textSize="20dp"
 
-       ></TextView>
+        android:textStyle="italic"></TextView>
 
 
 
