edits in home activity

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,8 @@
     tools:context=".HomeActivity">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/bgc">
 
         <Toolbar
             android:id="@+id/toolbar"
@@ -16,7 +17,8 @@
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
             android:title="Store"
-            android:titleTextColor="#4A4A4A" />
+            android:titleTextColor="#4A4A4A"
+            android:background="@color/white"/>
 
 
 <LinearLayout
@@ -24,49 +26,74 @@
     android:id="@+id/linear"
     android:translationZ="-2dp"
     android:layout_below="@+id/toolbar"
-    android:layout_height="200dp">
-        <HorizontalScrollView
+    android:layout_height="wrap_content">
+         <HorizontalScrollView
             android:id="@+id/hscroll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorAccent"
             android:layout_below="@+id/toolbar">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="100dp"
-                android:background="@color/colorAccent"
+                android:background="@color/cardview_light_background"
                 android:orientation="horizontal">
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="-100dp"
                     android:paddingRight="-100dp"
-                    android:src="@drawable/bg" />
+                    android:src="@drawable/bg"
+                    android:background="@color/cardview_dark_background"
+                    android:layout_margin="10dp"/>
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="-100dp"
                     android:paddingRight="-100dp"
-                    android:src="@drawable/bg" />
+                    android:src="@drawable/bg"
+                    android:background="@color/cardview_dark_background"
+                    android:layout_margin="10dp"/>
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="-100dp"
                     android:paddingRight="-100dp"
-                    android:src="@drawable/bg" />
+                    android:src="@drawable/bg"
+                    android:background="@color/cardview_dark_background"
+                    android:layout_margin="10dp"/>
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="-100dp"
                     android:paddingRight="-100dp"
-                    android:src="@drawable/bg" />
+                    android:src="@drawable/bg"
+                    android:background="@color/cardview_dark_background"
+                    android:layout_margin="10dp"/>
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="-100dp"
                     android:paddingRight="-100dp"
-                    android:src="@drawable/bg" />
+                    android:src="@drawable/bg"
+                    android:background="@color/cardview_dark_background"
+                    android:layout_margin="10dp"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="-100dp"
+                    android:paddingRight="-100dp"
+                    android:src="@drawable/bg"
+                    android:background="@color/cardview_dark_background"
+                    android:layout_margin="10dp"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="-100dp"
+                    android:paddingRight="-100dp"
+                    android:src="@drawable/bg"
+                    android:background="@color/cardview_dark_background"
+                    android:layout_margin="10dp"/>
             </LinearLayout>
         </HorizontalScrollView>
 </LinearLayout>
@@ -83,12 +110,84 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginTop="110dp">
 
                 <ImageView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/eecomedit" />
+                    android:src="@drawable/sale"
+                    android:adjustViewBounds="true"/>
+
+                <HorizontalScrollView
+                    android:id="@+id/hscroll2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/toolbar"
+                    android:layout_marginTop="10dp">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="100dp"
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="-100dp"
+                            android:paddingRight="-100dp"
+                            android:src="@drawable/bg"
+                            android:background="@color/cardview_dark_background"
+                            android:layout_margin="10dp"/>
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="-100dp"
+                            android:paddingRight="-100dp"
+                            android:src="@drawable/bg"
+                            android:background="@color/cardview_dark_background"
+                            android:layout_margin="10dp"/>
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="-100dp"
+                            android:paddingRight="-100dp"
+                            android:src="@drawable/bg"
+                            android:background="@color/cardview_dark_background"
+                            android:layout_margin="10dp"/>
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="-100dp"
+                            android:paddingRight="-100dp"
+                            android:src="@drawable/bg"
+                            android:background="@color/cardview_dark_background"
+                            android:layout_margin="10dp"/>
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="-100dp"
+                            android:paddingRight="-100dp"
+                            android:src="@drawable/bg"
+                            android:background="@color/cardview_dark_background"
+                            android:layout_margin="10dp"/>
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="-100dp"
+                            android:paddingRight="-100dp"
+                            android:src="@drawable/bg"
+                            android:background="@color/cardview_dark_background"
+                            android:layout_margin="10dp"/>
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="-100dp"
+                            android:paddingRight="-100dp"
+                            android:src="@drawable/bg"
+                            android:background="@color/cardview_dark_background"
+                            android:layout_margin="10dp"/>
+                    </LinearLayout>
+                </HorizontalScrollView>
 
                 <ImageView
                     android:layout_width="wrap_content"
