--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#AAA7A7</color>
     <color name="colorAccent">#D81B60</color>
     <color name="trans">#00000000</color>
+    <color name="bgc">#E8E8E8</color>
+    <color name="white">#FFFFFF</color>
 </resources>
