--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -35,7 +35,7 @@
         android:hint="Email address"
         android:inputType="textEmailAddress"
         android:layout_margin="20dp"
-        android:id="@+id/email"/>
+        android:id="@+id/phone"/>
 </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
